--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,88 @@
 @import "reset.css";
 @import "normalize.css";
+@import "fonts.css";
 @import "variables.css";
+
+*, *:before, *:after {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+body{
+    background: var(--bg);
+    font-family: "Century Gothic";
+}
+
+.d-flex{
+    display: flex;
+}
+
+.justify-content-between{
+    justify-content: space-between;
+}
+
+.container {
+    width: 990px;
+    margin: 0 auto;
+    padding: 0 17px;
+    position: relative;
+}
+
+.container:after, .container:before {
+    content: " ";
+    display: table;
+}
+
+.container:after {
+    clear: both;
+}
+
+.header{
+    margin-top: 20px;
+}
+
+.logo{
+    width: 205px;
+    height: 100px;
+}
+
+.logo img{
+    max-width: 100%;
+}
+
+.menu{
+    width: 650px;
+    text-align: right;
+    margin-top: 25px;
+}
+.menu-phone{
+    color: var(--font-menu);
+}
+.menu-phone i {
+    transform: rotate(90deg);
+    margin-right: 5px;
+}
+
+.menu-list{
+    margin-top: 15px;
+}
+
+.menu-list ul li a {
+    font-size: 15px;
+    color: var(--font-menu);
+}
+
+.section-divider{
+    max-width: 956px;
+    height: 1px;
+    color: #b3b3b3;
+    margin: 0 auto;
+    width: 100%;
+}
+
+
+
+.person{
+    width: 660px;
+}
