--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,7 +122,7 @@ body{
 }
 
 .social{
-    padding: 5px 15px;
+    padding: 5px;
 }
 
 .tweet p:nth-of-type(1), .like p:nth-of-type(1){
@@ -130,8 +130,60 @@ body{
 }
 
 .tweet p:nth-of-type(1){
-    border: 1px solid #8c8a8a;
-    border-radius: 2px;
+    border: 1px solid #b7b7b7;
+    border-radius: 3px;
+    padding: 2px 5px;
+    background: #dfe1e8;
+    font-weight: 600;
+    color: #323233;
+    font-size: 12px;
+    cursor: pointer;
+}
+
+.tweet p:nth-of-type(2), .like p:nth-of-type(2) {
+    position: relative;
+    background: #eceef5;
+    border: 1px solid #969696;
+    border-radius: 3px;
+    width: 18px;
+    text-align: center;
+    font-size: 12px;
+    padding-top: 2px;
+}
+.tweet p:nth-of-type(2):after, .tweet p:nth-of-type(2):before , .like p:nth-of-type(2):after , .like p:nth-of-type(2):before{
+    right: 100%;
+    top: 50%;
+    border: solid transparent;
+    content: "";
+    height: 0;
+    width: 0;
+    position: absolute;
+    pointer-events: none;
+}
+
+.tweet p:nth-of-type(2):after, .like p:nth-of-type(2):after {
+    border-color: rgba(136, 183, 213, 0);
+    border-right-color:  #eceef5;
+    border-width: 5px;
+    margin-top: -5px;
+}
+.tweet p:nth-of-type(2):before, .like p:nth-of-type(2):before {
+    border-color: rgba(194, 225, 245, 0);
+    border-right-color: #969696;
+    border-width: 6px;
+    margin-top: -7px;
+}
+
+.like p:nth-of-type(1){
+    display: flex;
+    font-size: 12px;
+    border: 1px solid #bbc7df;
+    border-radius: 3px;
+    padding: 2px 5px;
+    background: #dfe1ec;
+    font-weight: 600;
+    color: #5887ba;
+    cursor: pointer;
 }
 
 /*FOOTER*/
