--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -240,3 +240,36 @@ body{
 .line-rgb p{
 font-size: 12px
 }
+@media only screen and (min-width: 768px) and (max-width: 959px) {
+
+    .container {
+        width: 768px;
+    }
+    .logo{
+        margin: 0 auto;
+    }
+}
+
+@media only screen and (max-width: 767px) {
+
+    .container{
+        width: 100%;
+    }
+
+    .person{
+        flex-wrap: wrap;
+    }
+
+    .logo, .picture {
+        margin: 0 auto;
+    }
+    .copy, .line-rgb{
+        text-align: center;
+        margin: 10px auto;
+    }
+
+    .menu-list li{
+        width: 80px;
+        margin: 5px auto;
+    }
+}
